# chat-summary

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: new-game.md
.github/workflows/: tests.yml
chat_summary/: __init__.py  chat.py  chat_summary.py  game.py  games.py  get_available_games.py  messages.py  read_messages.py  send_message.py  update_readme.py
testing/: test.md  test_chat_summary.py  test_chats.py  test_game.py  test_get_games.py  test_messages.py  test_send_message.py  test_something.py  test_update_readme.py
testing/games/: test_connections.py  test_nerdle.py  test_wordle.py
