[metadata]
name = chat_summary
version = 1.0.0
author = Samir Gupta
author_email = srgupta@bigpond.com
url = https://github.com/samirg1/chat_summary


[options]
packages = find:

[options.packages.find]
exclude =
    testing*
    tests*

[options.entry_points]
console_scripts =
    chat_summary = chat_summary:main
