[metadata]
name = chat-summary
version = 1.0.4
author = Samir Gupta
author_email = srgupta@bigpond.com
url = https://github.com/samirg1/chat-summary
keywords = summary, wordle, nerdle, connections, chat, imessage
description = A tool to get an iMessage group chat summary for popular internet games.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
install_requires =
    pandas>=1.5.1
python_requires = >=3.10.0

[options.packages.find]
exclude =
    testing*
    tests*

[options.entry_points]
console_scripts =
    chat-summary = chat_summary:main
